# pr-173-2026

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docker/postgres/: Dockerfile  init-db.sql
docs/adr/: 001-spec-driven-development.md  002-framework-backend.md  003-microfrontend-strategy.md  004-redis-dual-purpose.md  005-ai-integration.md
frontend/orders-mfe/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/shell/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tsconfig.node.json  vite.config.ts
scripts/: init-db.sh  init-db.sql
services/orders-service/: Dockerfile  pyproject.toml  requirements.txt
services/orders-service/alembic/: env.py
services/orders-service/alembic/versions/: 001_create_orders_tables.py
services/orders-service/app/: dependencies.py  main.py  models.py  schemas.py
services/orders-service/app/api/v1/: router.py
services/orders-service/app/api/v1/endpoints/: orders.py
services/orders-service/app/core/: cache.py  config.py  database.py  logging.py  redis.py  security.py
services/orders-service/app/models/: order.py
services/orders-service/app/routes/: ai.py  orders.py
services/orders-service/app/schemas/: order.py
services/orders-service/scripts/: seed.py
services/orders-service/services/: cache_service.py  event_service.py  order_service.py
services/orders-service/tests/: conftest.py  test_orders_smoke.py
(+45 files in other folders)
